--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,3 +7,15 @@ body,
 #__nuxt {
   height: 100%;
 }
+
+@layer utilities {
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type='number'] {
+    -moz-appearance: textfield;
+  }
+}
